# bit_scope

./: .dockerignore  .gitignore  Dockerfile  README.MD  docker-compose.yml  main.py  pyproject.toml  read_parquet.py
.devcontainer/: devcontainer.json
.prefect/: prefect.db  prefect.db-shm
config/: airflow.cfg  config.py
dags/: price_ingestion.py
data/processed/: btc_prices.parquet
data/processed/alternative_me/: transform_fng_idx.parquet
data/processed/coindesk_articles/: coindesk_articles.parquet
data/processed/coingecko_btc_price/: btc_prices.parquet
data/processed/fred_economic_data/: transform_cpi.parquet  transform_interest_rates.parquet  transform_spy_price.parquet  (+1 more)
docker/: docker-compose.yml
flows/: ingestion_flow.py  transform_flow.py
ingestion/logging/: get_metadata_log.py  metadata_log.py
ingestion/scripts/: alternative_api.py  coindesk_scraping.py  fred_economic_data.py  interest_rates.py  raw_prices.py  subreddits_posts.py
scripts/: raw_prices.py
storage/: connection.py  repositories.py  schema.sql  test.py
storage/db/: database.duckdb
transformation/: transform_btc_prices.py
transformation/alternative_me/: transform_fng.py
transformation/coindesk_scrap_articles/: transform_coindesk_articles.py
transformation/coingecko_btc_price/: transform_btc_prices.py
transformation/fred_economic_data/: transform_cpi.py  transform_fred_economic_data.py
transformation/reddit_api/: tansform_subreddits_posts.py
visualization/: dashboard.py  economics_page.py  market_data_page.py  market_sentiment_page.py  news.py  reddit.py
(+31 files in other folders)
