[project]
name = "bit-scope"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpraw>=7.8.1",
    "beautifulsoup4>=4.14.2",
    "duckdb>=1.4.2",
    "fredapi>=0.5.2",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "plotly>=6.4.0",
    "prefect>=3.6.2",
    "ruff>=0.14.5",
    "seaborn>=0.13.2",
    "streamlit>=1.51.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
]
